--- a/index.html
+++ b/index.html
@@ -3,19 +3,28 @@
 <head>
   <title>Hexanote</title>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
   <link rel="stylesheet" href="res/css/main.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="res/js/script.js"></script>
 </head>
 <body>
-  
-  <div class="row col-lg-12">
-    <img class="lead" src="res/img/logo.png">
-  </div>
-  <div class="row col-lg-12" id="hexagon">
+
+  <ul id="lead" class="hexanote hidden">
+    <li>H</li>
+    <li>E</li>
+    <li>X</li>
+    <li>A</li>
+    <li>N</li>
+    <li>O</li>
+    <li>T</li>
+    <li>E</li>
+  </ul>
+
+
+<!--   <div class="row col-lg-12" id="hexagon">
     <img src="res/img/hexagon.png" class="hexagon">
-  </div>
+  </div> -->
 
 </body>
 </html>
