--- a/index.html
+++ b/index.html
@@ -2,17 +2,27 @@
 <html>
 <head>
   <title>Hexanote</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="res/css/main.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="res/js/script.js"></script>
 </head>
 <body>
-  <div class="row col-lg-12">
-    <img class="lead" src="res/img/logo.png">
+
+  <ul id="lead" class="hexanote hidden">
+    <li>H</li>
+    <li>E</li>
+    <li>X</li>
+    <li>A</li>
+    <li>N</li>
+    <li>O</li>
+    <li>T</li>
+    <li>E</li>
+  </ul>
+
+
+  <div class="hexagon-container">
+    <img class="hexagon" src="res/img/hexagon.png">
   </div>
-  <div class="row col-lg-12" id="hexagon">
-    <img src="res/img/hexagon.png" class="hexagon">
-  </div>
+
 </body>
 </html>
