--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
   </ul>
 
   <div class="hexagon-container">
-    <img class="hexagon" src="res/img/hexagon.png">
-  </div>
+    <svg class="hexagon" width="400px" height="400px" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" version="1.1">
+      <polygon class="polygon" style="stroke-width:2.5px" points="148,183.138438763306 52,183.138438763306 4,100 52,16.8615612366939 148,16.8615612366939 196,99.9999999999999 148,183.138438763306" />
+    </svg>
+</div>
 
 </body>
 </html>
