--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
   
     <title>Hexanote</title>
+    <link rel='shortcut icon' href='res/img/favicon.ico' type='image/x-icon'/ >
     <meta charset="UTF-8">
 
     <link rel="stylesheet" href="res/css/main.css">
